@@ -2,12 +2,14 @@ package team.lindo.backend.application.board.dto;
 
 import lombok.Getter;
 import team.lindo.backend.application.board.entity.Posting;
+import team.lindo.backend.application.board.entity.PostingProduct;
 import team.lindo.backend.application.user.dto.UserSummaryDto;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Getter
 public class PostingSummaryDto {
@@ -17,7 +19,7 @@ public class PostingSummaryDto {
     private String updatedAt;
     private Set<String> hashtags;
     private List<String> imageUrls;
-    private List<TaggedProductDto> taggedProducts;
+    private List<TaggedProductGroupDto> taggedProducts;
     public PostingSummaryDto(Posting posting) {
         this.id = posting.getId();
         this.content = posting.getContent();
@@ -25,14 +27,20 @@ public class PostingSummaryDto {
         this.updatedAt = posting.getUpdatedAt().toString();
         this.hashtags = posting.getHashtags();
         this.imageUrls = posting.getImageUrls();
-        this.taggedProducts = posting.getPostingProducts().stream()
-                .map(pp -> new TaggedProductDto(
-                        pp.getProduct().getId(),
-                        pp.getProduct().getName(),
-                        pp.getProduct().getPrice(),
-                        pp.getX(),
-                        pp.getY()
-                ))
-                .toList();
+        Map<Long, List<TaggedProductDto>> taggedMap = posting.getPostingProducts().stream()
+                .collect(Collectors.groupingBy(
+                        PostingProduct::getImageId,
+                        Collectors.mapping(pp -> new TaggedProductDto(
+                                pp.getProduct().getId(),
+                                pp.getProduct().getName(),
+                                pp.getProduct().getPrice(),
+                                pp.getX(),
+                                pp.getY()
+                        ), Collectors.toList())
+                ));
+
+        this.taggedProducts = taggedMap.entrySet().stream()
+                .map(e -> new TaggedProductGroupDto(e.getKey().toString(), e.getValue()))
+                .collect(Collectors.toList());
     }
 }
